# signallens-evalops

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: __init__.py  main.py
app/analysis/: __init__.py  models.py  registry.py  repositories.py  service.py
app/api/: __init__.py  analysis_routes.py  dashboard_routes.py  metrics_routes.py  quality_routes.py  rag_routes.py  retrieval_routes.py  routes.py  schemas.py  trace_routes.py
app/core/: __init__.py  config.py  dependencies.py  errors.py
app/dashboard/: __init__.py  models.py  repositories.py  service.py
app/data/: eval_set.jsonl  policy.md  retrieval_ground_truth.jsonl
app/evals/: __init__.py
app/evaluators/: __init__.py  dataset.py  metrics.py  reports.py  runner.py  types.py
app/metrics/: __init__.py  models.py  repositories.py  service.py
app/mlflow/: __init__.py  tracking.py
app/quality/: __init__.py  models.py  registry.py  repositories.py  service.py
app/rag/: __init__.py  chunking.py  embeddings.py  ingestion.py  models.py  parsers.py
app/ranking/: __init__.py  metrics.py
app/retrieval/: __init__.py  benchmark.py  evaluation.py  filters.py  leaderboard.py  models.py  retrievers.py  service.py  similarity.py
app/retrieval/adapters/: __init__.py  chroma.py  pgvector.py
app/storage/: __init__.py  models.py  registry.py  repositories.py
app/traces/: __init__.py  models.py  registry.py  repositories.py  service.py
app/tracing/: __init__.py  langfuse_client.py
app/workflows/: __init__.py  graph.py  nodes.py  state.py
demo/: evalops_demo.py
deploy/aws/: README.md  env.example  service.template.json  task-definition.template.json
docs/: api.md  architecture-one-pager.md  architecture.md  database-schema.md  eval-plan.md  github-positioning.md  mvp-roadmap.md  signalLens-2-architecture.md  sprint-plan.md
reports/: retrieval_benchmark_sprint2.md  retrieval_leaderboard.json  week1_eval_summary.md
tests/: test_analysis.py  test_dashboard.py  test_evaluators.py  test_health.py  test_metrics.py  test_quality.py  test_rag_ingestion.py  test_retrieval.py  test_traces.py
