[project]
name = "signallens-evalops"
version = "0.2.0"
description = "AI EvalOps and LLMOps platform for RAG evaluation, retrieval metrics, traces, quality gates, and observability dashboards."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "langfuse>=4.0.0",
    "langgraph>=0.2.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
platform = [
    "chromadb>=0.5.0",
    "deepeval>=1.0.0",
    "langchain>=0.3.0",
    "mlflow>=2.15.0",
    "psycopg[binary]>=3.2.0",
    "pypdf>=5.0.0",
    "python-docx>=1.1.0",
    "ragas>=0.2.0",
    "sentence-transformers>=3.0.0",
    "sqlalchemy>=2.0.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[build-system]
requires = ["setuptools>=70.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
